# wintypes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
scripts/: parse_dll_exports.py  parse_doc_crates.py  requirements.txt
src/: advapi32.rs  crypt32.rs  kernel32.rs  kernelbase.rs  lib.rs  ntdll.rs  types.rs  user32.rs  winhttp.rs
