[package]
name = "wintypes"
version = "0.1.3"
edition = "2021"
authors = ["NioZ"]
description = "A rust library that exports windows functions as types"
readme = "README.md"
license = "MIT"
keywords = ["wintypes", "windows"]
repository = "https://github.com/NioZow/wintypes"

[dependencies]
ntapi = { version = "0.4", features = ["impl-default", "kernel"] }
winapi = { version = "0.3", features = ["ntdef", "libloaderapi", "winnt", "minwindef", "winuser", "processthreadsapi", "everything", "winefs", "ntlsa", "accctrl", "wct", "wincred", "wincrypt", "winsvc", "ncrypt", "timezoneapi", "winbase", "appmgmt", "lsalookup", "mschapp", "perflib", "winreg", "winsafer", "aclapi", "vadefs", "bcrypt", "basetsd", "evntprov", "mssip", "dpapi", "winhttp", "mstcpip", "ktmtypes", "vcruntime", "winnls", "synchapi", "wincontypes", "fileapi", "memoryapi", "threadpoolapiset", "psapi", "sysinfoapi", "wincon", "heapapi", "processsnapshot", "errhandlingapi", "werapi", "tlhelp32", "jobapi2", "mmsystem", "wingdi"] }

[features]
advapi32 = []
crypt32 = []
kernel32 = []
kernelbase = []
winhttp = []
ntdll = []
user32 = []

all = [
    "advapi32",
    "crypt32",
    "kernel32",
    "kernelbase",
    "winhttp",
    "ntdll",
    "user32"
]
